--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>Live in Pennsylvania</li>
             <li>Avid follower of Christ</li>
         </ul>
-        <p>Please connect with me on <a href="https://www.linkedin.com/in/ethangtitus/">LinkedIn here</a>.</p>
+        <p>Please connect with me on <a href="https://www.linkedin.com/in/ethangtitus/" target="_blank">LinkedIn here</a>.</p>
         <input type="text" placeholder="Enter email...">
         <button>Join newsletter</button>        
     </body>
